--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="lib" path="lib/mssql-jdbc-12.2.0.jre11.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
