--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/jgoodies-looks-2.4.1.jar"/>
-	<classpathentry kind="lib" path="lib/mssql-jdbc-12.2.0.jre11.jar"/>
+	<classpathentry kind="lib" path="lib/mssql-jdbc-12.2.0.jre11.jar" sourcepath="lib/mssql-jdbc-12.2.0.jre11.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.6.jar"/>
 	<classpathentry kind="lib" path="lib/jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jgoodies-forms-1.8.0.jar"/>
