Hoàn thành xử lí ảnh NV, lỗi thư viện xuất excel

--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="D:/HK5/PTUD/SalaryAndProduct-Management-System/lib/swingx-all-1.6.4.jar"/>
+	<classpathentry kind="lib" path="D:/HK5/PTUD/SalaryAndProduct-Management-System/lib/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="D:/HK5/PTUD/SalaryAndProduct-Management-System/lib/commons-compress-1.18.jar"/>
+	<classpathentry kind="lib" path="D:/HK5/PTUD/SalaryAndProduct-Management-System/lib/poi-4.1.2.jar"/>
+	<classpathentry kind="lib" path="D:/HK5/PTUD/SalaryAndProduct-Management-System/lib/poi-ooxml-4.1.2.jar"/>
+	<classpathentry kind="lib" path="D:/HK5/PTUD/SalaryAndProduct-Management-System/lib/poi-ooxml-schemas-4.1.2.jar"/>
+	<classpathentry kind="lib" path="D:/HK5/PTUD/SalaryAndProduct-Management-System/lib/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="D:/HK5/PTUD/SalaryAndProduct-Management-System/lib/xmlbeans-3.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
